--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "incremental": true,
     "outDir": "build",
-    "target": "es5",
-    "module": "esnext",
+    "target": "es6",
+    "baseUrl": "/",
+    "module": "amd",
     "lib": ["dom", "esnext"],
     "sourceMap": true,
     "importHelpers": true,
     "declaration": true,
-    "rootDir": "src",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -17,7 +17,6 @@
     "allowJs": false,
     "jsx": "react",
     "moduleResolution": "node",
-    "baseUrl": "src",
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "suppressImplicitAnyIndexErrors": true,
