--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "tmc-react-component-library",
-  "version": "0.1.0",
+  "version": "0.1.15",
+  "main": "index.js",
+  "type": "index.d.ts",
   "private": false,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "webpack": "webpack"
+    "webpack": "rm -rf build && webpack"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -24,15 +26,33 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/classnames": "^2.2.10",
+    "classnames": "^2.2.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "babel-loader": "^8.1.0",
+    "classnames": "^2.2.6",
     "css-loader": "^3.5.2",
+    "fork-ts-checker-webpack-plugin": "^4.1.3",
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.0",
@@ -42,10 +62,10 @@
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
+    "styles-loader": "^2.0.0",
     "ts-loader": "^7.0.1",
-    "typescript": "^3.8.3"
-  },
-  "devDependencies": {
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
 }
