--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
     "incremental": true,
     "outDir": "build",
     "target": "es6",
-    "baseUrl": "/",
+    "baseUrl": "src",
     "module": "amd",
+    "rootDirs": ["src", ".storybook/stories"],
     "lib": ["dom", "esnext"],
     "sourceMap": true,
     "importHelpers": true,
@@ -23,6 +24,6 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", ".storybook/**/*"],
   "exclude": ["node_modules", "build", "scripts"]
 }
