--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tmc-react-component-library",
-    "version": "0.1.26",
+    "version": "0.1.32",
     "private": false,
     "module": "index.js",
     "scripts": {
@@ -27,14 +27,9 @@
     },
     "peerDependencies": {
       "react": "^16.13.1",
-      "react-dom": "^16.13.1"
-      
-    },
-    "dependencies": {
-        "@types/react": "^16.9.34",
-        "@types/react-dom": "^16.9.6",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+      "react-dom": "^16.13.1",
+      "@types/react": "^16.9.34",
+      "@types/react-dom": "^16.9.6"
     }
   }
   
