--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "target": "es6",
     "baseUrl": "src",
     "module": "amd",
-    "rootDirs": ["src", ".storybook/stories"],
     "lib": ["dom", "esnext"],
     "sourceMap": true,
     "importHelpers": true,
@@ -24,6 +23,6 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true
   },
-  "include": ["src/**/*", ".storybook/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "build", "scripts"]
 }
