--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "node_modules/karma/bin/karma start --single-run",
+    "test-watch": "node_modules/karma/bin/karma start",
     "eject": "react-scripts eject",
     "webpack": "rm -rf build && webpack",
     "storybook": "start-storybook"
@@ -51,15 +52,30 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/classnames": "^2.2.10",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jasmine-enzyme": "^7.0.0",
     "@types/jest": "^25.2.1",
+    "@types/karma-jasmine": "^3.1.0",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
     "css-loader": "^3.5.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "html-webpack-plugin": "^4.2.0",
+    "jasmine-enzyme": "^7.1.2",
+    "karma": "^5.0.5",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.2",
+    "karma-coverage-istanbul-reporter": "^3.0.2",
+    "karma-jasmine": "^3.1.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^4.0.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
